Fix lead spacing

--- a/contrib/print/_content.sass
+++ b/contrib/print/_content.sass
@@ -27,6 +27,7 @@
 
   .lead p
     font-style: italic
+    line-height: $single_line_height
     margin: ($base_font_size * 2) 0 ($base_font_size * 2) (2 * $tab_width)
     text-indent: 0
     i, em
